crates/hid-simucube-protocol/tests/snapshots/snapshot_tests__snapshot_output_full_negative_torque.snap
---
source: crates/hid-simucube-protocol/tests/snapshot_tests.rs
expression: data
---
[
    1,
    0,
    0,
    60,
    246,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
]
