crates/hid-simucube-protocol/tests/snapshots/snapshot_tests__snapshot_output_full_positive_torque.snap
---
source: crates/hid-simucube-protocol/tests/snapshot_tests.rs
expression: data
---
[
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    196,
    9,
    0,
    0,
    0,
    0,
    0,
    0,
]
