crates/hid-simucube-protocol/tests/snapshots/snapshot_tests__snapshot_output_with_rgb.snap
---
source: crates/hid-simucube-protocol/tests/snapshot_tests.rs
expression: data
---
[
    1,
    0,
    0,
    244,
    1,
    255,
    128,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
]
